# gen7free

./: LICENSE  README.md
gen7free/: main.py  pyproject.toml
gen7free/gen7free/Image/: Client.py
