[tool.poetry]
name = "gen7free"
version = "0.1.0"
description = ""
authors = ["S1avv <code.launchx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
